集成spring-boot-starter-web、mysql-connector-java、mybatis-spring-boot-starter、mybatis-plus-boot-starter、druid-spring-boot-starter

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <mybatis.version>2.2.0</mybatis.version>
+        <druid.version>1.2.6</druid.version>
+        <mybatis.plus.version>3.4.3.1</mybatis.plus.version>
+        <mysql.connector.version>8.0.25</mysql.connector.version>
     </properties>
 
     <!-- SpringCloud-dependencies版本管理 -->
@@ -33,4 +37,35 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <!--web模块-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--mysql connector-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.connector.version}</version>
+        </dependency>
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
+        <!--mybatis plus-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis.plus.version}</version>
+        </dependency>
+        <!--druid连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+    </dependencies>
 </project>
