1：增加新增用户接口 2：增加用户未登录异常统一处理 3：用户值对象增加数据校验 4：增加数据校验依赖spring-boot-starter-validation

--- a/pom.xml
+++ b/pom.xml
@@ -139,5 +139,10 @@
             <artifactId>springfox-boot-starter</artifactId>
             <version>${springfox.version}</version>
         </dependency>
+        <!-- 数据校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
