--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
  */
 
 plugins {
-    id 'org.springframework.boot' version '2.5.3'
+    id 'org.springframework.boot' version "${SPRING_BOOT_VERSION}"
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -22,8 +22,8 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
-        mavenBom 'com.alibaba.cloud:spring-cloud-alibaba-dependencies:2021.1'
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${SPRING_CLOUD_VERSION}"
+        mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${SPRING_CLOUD_ALIBABA_VERSION}"
     }
 }
 
