--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
 
 plugins {
     id 'org.springframework.boot' version "${SPRING_BOOT_VERSION}"
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'io.spring.dependency-management' version "${SPRING_DEPENDENCY_MANAGEMENT_VERSION}"
     id 'java'
 }
 
