--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ SPRING_CLOUD_VERSION=2020.0.3
 # SpringCloud Alibaba\u7248\u672C
 SPRING_CLOUD_ALIBABA_VERSION=2021.1
 # Spring Dependency Management\u7248\u672C
-SPRING_DEPENDENCY_MANAGEMENT_VERSION=2021.1
+SPRING_DEPENDENCY_MANAGEMENT_VERSION=1.0.11.RELEASE
