--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -9,6 +9,7 @@ spring:
         namespace: ${nacos_namespace:0fc7a907-7d3d-4e96-bf8c-a603a0939a9f}
         server-addr: ${nacos_ip:127.0.0.1:8848}
         file-extension: yml
+        group: ${group:DEFAULT_GROUP}
       discovery:
         namespace: ${nacos_namespace:0fc7a907-7d3d-4e96-bf8c-a603a0939a9f}
         server-addr: ${nacos_ip:127.0.0.1:8848}
