--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,5 @@ SPRING_CLOUD_VERSION=2020.0.3
 SPRING_CLOUD_ALIBABA_VERSION=2021.1
 # Spring Dependency Management\u7248\u672C
 SPRING_DEPENDENCY_MANAGEMENT_VERSION=1.0.11.RELEASE
+# \u9879\u76EE\u7248\u672C
+PROJECT_VERSION=1.0-SNAPSHOT
