--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'org.apache.commons:commons-pool2:2.10.0'
     // swagger支持
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    // jetcache缓存框架
+    implementation 'com.alicp.jetcache:jetcache-starter-redis:2.6.0'
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
