增加spring-boot-starter-test依赖

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    // 单元测试
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.withType(JavaCompile) {
