--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ dependencies {
     // jetcache缓存框架
     implementation 'com.alicp.jetcache:jetcache-starter-redis:2.6.0'
     // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     // 单元测试
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
