1：dto统一移入到doraemon-dubbo-provider中 2：dubbo provider接口移入到doraemon-dubbo-provider

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
     // commons-lang3
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    // doraemon-dubbo-provider
+    implementation 'com.conifercone:doraemon-dubbo-provider:1.0.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     // 单元测试
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
