--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 
-group = 'com.conifercone'
+group = 'cn.conifercone'
 description = 'uaa'
 sourceCompatibility = '1.8'
 version = "${PROJECT_VERSION}"
@@ -18,6 +18,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencyManagement {
@@ -25,13 +26,14 @@ dependencyManagement {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${SPRING_CLOUD_VERSION}"
         mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${SPRING_CLOUD_ALIBABA_VERSION}"
     }
+    resolutionStrategy {
+        cacheChangingModulesFor 0, 'seconds'
+    }
 }
 
 dependencies {
     // web模块
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    // actuator
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     // 数据校验
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     // mysql驱动
@@ -48,8 +50,8 @@ dependencies {
     implementation 'com.alibaba.cloud:spring-cloud-starter-alibaba-nacos-discovery'
     // bootstrap文件读取支持
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
-    // dubbo
-    implementation 'com.alibaba.cloud:spring-cloud-starter-dubbo'
+    // grpc
+    implementation 'net.devh:grpc-server-spring-boot-starter:2.12.0.RELEASE'
     // saToken
     implementation 'cn.dev33:sa-token-spring-boot-starter:1.25.0'
     // hutool工具包
@@ -68,9 +70,11 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.20'
     // commons-lang3
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    // doraemon-dubbo-provider
-    implementation 'cn.conifercone:doraemon-dubbo-provider:1.0.1'
+    // doraemon-grpc-provider
+    implementation 'cn.conifercone:doraemon-grpc-provider:1.0.0-SNAPSHOT'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    // jjwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.0'
     // 单元测试
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -81,4 +85,9 @@ tasks.withType(JavaCompile) {
 
 test {
     useJUnitPlatform()
+}
+
+configurations.all {
+    // check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
